--- a/m2/w2/d3/scompito-d3/package.json
+++ b/m2/w2/d3/scompito-d3/package.json
@@ -1,11 +1,14 @@
 {
   "name": "scompito-d3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass scss/style.scss css/style.css -w"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "node-sass": "^7.0.1"
+  }
 }
